# eemeter

./: CHANGELOG.md  Dockerfile  README.md  pyproject.toml  upstream_commit_hash
.github/workflows/: trivy-dependencies-submission.yml
docs/: requirements.txt
opendsm/: __init__.py  __version__.py
opendsm/common/: const.py  test_data.py  utils.py
opendsm/common/clustering/: bisect_k_means.py  scoring.py
opendsm/common/stats/: adaptive_loss.py  basic.py  outliers.py  outliers_transformed.py
opendsm/common/stats/distribution_transform/: __init__.py  bisymlog.py  mu_sigma.py  raymaekers_robust_yeo_johnson.py  scipy_yeo_johnson.py  standardize.py
opendsm/comparison_groups/: __init__.py
opendsm/comparison_groups/_utils/: __init__.py  base_comparison_group.py  base_settings.py  data.py  data_settings.py
opendsm/comparison_groups/clustering/: __init__.py  bisect_k_means.py  cluster.py  const.py  create_comparison_groups.py  scoring.py  settings.py  transform.py  treatment_fit.py
opendsm/comparison_groups/common/: const.py
opendsm/comparison_groups/individual_meter_matching/: __init__.py  create_comparison_groups.py  distance_calc_selection.py  highs_settings.py  settings.py
opendsm/comparison_groups/random_sampling/: __init__.py  create_comparison_groups.py  settings.py
opendsm/comparison_groups/savings/: __init__.py  model_correction.py
opendsm/comparison_groups/stratified_sampling/: __init__.py  bin_selection.py  bins.py  const.py  create_comparison_groups.py  diagnostics.py  equivalence.py  model.py  param_selection.py  settings.py
opendsm/eemeter/: __init__.py
opendsm/eemeter/models/billing/: plot.py
opendsm/eemeter/models/daily/: plot.py
opendsm/eemeter/models/daily/base_models/: c_hdd_tidd.py  full_model.py
opendsm/eemeter/models/daily/utilities/: base_model.py
opendsm/eemeter/models/hourly_caltrack/: wrapper.py
website/: requirements.txt
